<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".new_labor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/customStyle"/>
        <TextView
            android:id="@+id/tv_date_new_labor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Select Date"
            style="@style/customStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_code"
            style="@style/customStyle"/>
        <Spinner
            android:id="@+id/sp_activity_code_new_labor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/navy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            style="@style/customStyle"/>
        <Spinner
            android:id="@+id/sp_activity_new_labor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/navy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farm_name"
            style="@style/customStyle"/>
        <Spinner
            android:id="@+id/sp_farm_name_new_labor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/navy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sector"
            style="@style/customStyle"/>
        <Spinner
            android:id="@+id/sp_sector_new_labor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/navy"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_labor"
            style="@style/customStyle"/>
        <EditText
            android:id="@+id/edt_new_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:inputType="number"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            style="@style/customStyle"/>
        <EditText
            android:id="@+id/edt_new_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:inputType="number"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            style="@style/customStyle"/>
        <TextView
            android:id="@+id/tv_new_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customStyle"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_add_new_activity"
        style="@style/Button_Style"
        android:layout_gravity="center"
        android:text="add"
        />
</LinearLayout>