<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".update_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            style="@style/customStyle"/>
        <EditText
            android:id="@+id/edt_update_user"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/ib_update_account_refresh"
            android:layout_width="46dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/arrow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/customStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edt_update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:textColor="@color/navy" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            style="@style/customStyle"/>
        <Spinner
            android:id="@+id/sp_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/navy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/own"
            style="@style/customStyle"/>
        <EditText
            android:id="@+id/edt_update_own"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:layout_margin="10dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_update"
        style="@style/Button_Style"
        android:layout_gravity="center"
        android:text="update"
        />

</LinearLayout>